page membre integration, page visiteur correction de bug, btn chat et contact version tablette

--- a/React/app/src/components/ChatBtn/chatBtn.styl
+++ b/React/app/src/components/ChatBtn/chatBtn.styl
@@ -14,6 +14,10 @@
 .chatVisible
 	display: block
 
+@media screen and (min-width: 500px)
+	#chatBtn
+		top: 80%
+		color: $bgBtn
 @media screen and (min-width: 1200px)
 	#chatBtn
 		top: 75%
