--- a/React/app/src/components/ContactBtn/contactBtn.styl
+++ b/React/app/src/components/ContactBtn/contactBtn.styl
@@ -9,8 +9,10 @@
 	color:  $bgBtn
 	margin: .3em
 
-
-
+@media screen and (min-width: 500px)
+	#contactBtn
+		top: 87%
+		color: $bgBtn
 @media screen and (min-width: 1200px)
 	#contactBtn
 		top: 80%
