--- a/React/app/src/components/HomeVisiteur/homeVisiteur.styl
+++ b/React/app/src/components/HomeVisiteur/homeVisiteur.styl
@@ -3,6 +3,7 @@
 
 #homeVisiteur
   display: block
+  font-family: $text
   padding-top: 5em
   background: linear-gradient($bgPeche, $bgPink, $bgOrange)
   scroll-behavior: smooth
@@ -92,7 +93,6 @@
 
 
 .visiteur-articles
-  // background-color: $bgPinkLigth
   height: 8em
   font-size: 2em
   color: $color
